tests/baselines/reference/emitArrowFunctionWhenUsingArguments18.errors.txt
emitArrowFunctionWhenUsingArguments18.ts(4,22): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== emitArrowFunctionWhenUsingArguments18.ts (1 errors) ====
    function f() {
        var { arguments: args } = { arguments };
        if (Math.random()) {
            return () => arguments;
                         ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
        }
    }